jiradc/jira-dc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/proxy-body-size: 250m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
  name: jira-dc
  namespace: opsera-jira-dc
spec:
  rules:
  - host: jiradc.shared-private.opsera.io
    http:
      paths:
      - backend:
          service:
            name: jira-dc
            port:
              number: 80
        path: /
        pathType: Prefix
